src/OpenFOAM/primitives/strings/stringOps/toScalar/evalStringToScalarScanner.cc

#line 1 "evalStringToScalarScanner.rl"
/*--------------------------------*- C++ -*----------------------------------*\
  =========                 |
  \\      /  F ield         | OpenFOAM: The Open Source CFD Toolbox
   \\    /   O peration     |
    \\  /    A nd           | www.openfoam.com
     \\/     M anipulation  |
-------------------------------------------------------------------------------
    Copyright (C) 2019 OpenCFD Ltd.
-------------------------------------------------------------------------------
License
    This file is part of OpenFOAM.

    OpenFOAM is free software: you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    OpenFOAM is distributed in the hope that it will be useful, but WITHOUT
    ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
    FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
    for more details.

    You should have received a copy of the GNU General Public License
    along with OpenFOAM.  If not, see <http://www.gnu.org/licenses/>.

Description
    Ragel lexer interface for lemon grammar of a simple string to
    scalar evaluation

\*---------------------------------------------------------------------------*/

#include "evalStringToScalarScanner.H"
#include "evalStringToScalarDriver.H"
#include "evalStringToScalarLemonParser.h"
#include "evalStringToScalarParser.H"
#include "error.H"
#include "macros.H"

#pragma GCC diagnostic ignored "-Wimplicit-fallthrough"
#pragma GCC diagnostic ignored "-Wold-style-cast"


/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

// Ragel lexer with lemon parser integration

// Ragel machine definition
// Ragel variables (p, pe, eof, cs, top, stack, ts, te, act) defined later...
//
// Can use 'variable p xxx;' etc to change these names


#line 56 "evalStringToScalarScanner.cc"
static const int evalScanner_start = 7;
static const int evalScanner_first_final = 7;
static const int evalScanner_error = 0;

static const int evalScanner_en_main = 7;


#line 55 "evalStringToScalarScanner.rl"



#undef DebugScannerInfo
#define DebugScannerInfo if (debug & 4) InfoErr


#define TOKEN_OF(T)         TOK_##T
#define EMIT_TOKEN(T)                                                         \
    driver.parsePosition() = (ts-buf);                                        \
    DebugScannerInfo << STRINGIFY(T) << ": "<< driver.parsePosition() << nl;  \
    parser_->parse(TOKEN_OF(T), 0);                                           \
    driver.parsePosition() = (p-buf);



#line 181 "evalStringToScalarScanner.rl"



// * * * * * * * * * * * * * * * * Destructor  * * * * * * * * * * * * * * * //

Foam::parsing::evalStringToScalar::scanner::~scanner()
{
    if (parser_)
    {
        delete parser_;
    }
}


// * * * * * * * * * * * * * * * Member Functions  * * * * * * * * * * * * * //

bool Foam::parsing::evalStringToScalar::scanner::process
(
    const std::string& str,
    size_t strBeg,
    size_t strLen,
    parseDriver& driver
)
{
    if (!parser_)
    {
        parser_ = new parser();
    }

    driver.content(str, strBeg, strLen);

    size_t strEnd = str.length();

    if (strBeg > str.length())
    {
        strBeg = str.length();
    }
    else if (strLen != std::string::npos)
    {
        strLen += strBeg;

        if (strLen < str.length())
        {
            strEnd = strLen;
        }
    }


    parser_->start(driver);

    // Ragel token start/end (required naming)
    const char* ts;
    const char* te;

    // Local buffer data.
    // - p, pe, eof are required Ragel naming
    // - buf is our own naming

    const char* buf = &(str[strBeg]);
    const char* eof = &(str[strEnd]);
    const char* p = buf;
    const char* pe = eof;

    // Initialize FSM variables
    
#line 147 "evalStringToScalarScanner.cc"
	{
	cs = evalScanner_start;
	ts = 0;
	te = 0;
	act = 0;
	}

#line 245 "evalStringToScalarScanner.rl"
   /* ^^^ FSM initialization here ^^^ */;

    
#line 159 "evalStringToScalarScanner.cc"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
tr0:
#line 134 "evalStringToScalarScanner.rl"
	{te = p+1;{ EMIT_TOKEN(LAND); }}
	goto st7;
tr3:
#line 73 "evalStringToScalarScanner.rl"
	{{p = ((te))-1;}{
        driver.parsePosition() = (ts-buf);

        DebugScannerInfo
            << "Number:" << std::string(ts, te-ts).c_str()
            << " at " << driver.parsePosition() << nl;

        scalar val(0);

        if (readScalar(std::string(ts, te-ts), val))
        {
            // Emit number
            parser_->parse(TOKEN_OF(NUMBER), val);
        }
        else
        {
            // Range error
            driver.reportFatal("Error parsing number");
        }

        driver.parsePosition() = (p-buf);
    }}
	goto st7;
tr6:
#line 132 "evalStringToScalarScanner.rl"
	{te = p+1;{ EMIT_TOKEN(EQUAL); }}
	goto st7;
tr7:
#line 135 "evalStringToScalarScanner.rl"
	{te = p+1;{ EMIT_TOKEN(LOR); }}
	goto st7;
tr10:
#line 117 "evalStringToScalarScanner.rl"
	{te = p+1;{ EMIT_TOKEN(PERCENT); }}
	goto st7;
tr12:
#line 118 "evalStringToScalarScanner.rl"
	{te = p+1;{ EMIT_TOKEN(LPAREN); }}
	goto st7;
tr13:
#line 119 "evalStringToScalarScanner.rl"
	{te = p+1;{ EMIT_TOKEN(RPAREN); }}
	goto st7;
tr14:
#line 120 "evalStringToScalarScanner.rl"
	{te = p+1;{ EMIT_TOKEN(TIMES); }}
	goto st7;
tr15:
#line 121 "evalStringToScalarScanner.rl"
	{te = p+1;{ EMIT_TOKEN(PLUS); }}
	goto st7;
tr16:
#line 123 "evalStringToScalarScanner.rl"
	{te = p+1;{ EMIT_TOKEN(COMMA); }}
	goto st7;
tr17:
#line 122 "evalStringToScalarScanner.rl"
	{te = p+1;{ EMIT_TOKEN(MINUS); }}
	goto st7;
tr19:
#line 124 "evalStringToScalarScanner.rl"
	{te = p+1;{ EMIT_TOKEN(DIVIDE); }}
	goto st7;
tr21:
#line 127 "evalStringToScalarScanner.rl"
	{te = p+1;{ EMIT_TOKEN(COLON); }}
	goto st7;
tr25:
#line 126 "evalStringToScalarScanner.rl"
	{te = p+1;{ EMIT_TOKEN(QUESTION); }}
	goto st7;
tr41:
#line 111 "evalStringToScalarScanner.rl"
	{te = p;p--;}
	goto st7;
tr42:
#line 116 "evalStringToScalarScanner.rl"
	{te = p;p--;{ EMIT_TOKEN(NOT); }}
	goto st7;
tr43:
#line 133 "evalStringToScalarScanner.rl"
	{te = p+1;{ EMIT_TOKEN(NOT_EQUAL); }}
	goto st7;
tr44:
#line 73 "evalStringToScalarScanner.rl"
	{te = p;p--;{
        driver.parsePosition() = (ts-buf);

        DebugScannerInfo
            << "Number:" << std::string(ts, te-ts).c_str()
            << " at " << driver.parsePosition() << nl;

        scalar val(0);

        if (readScalar(std::string(ts, te-ts), val))
        {
            // Emit number
            parser_->parse(TOKEN_OF(NUMBER), val);
        }
        else
        {
            // Range error
            driver.reportFatal("Error parsing number");
        }

        driver.parsePosition() = (p-buf);
    }}
	goto st7;
tr46:
#line 128 "evalStringToScalarScanner.rl"
	{te = p;p--;{ EMIT_TOKEN(LESS); }}
	goto st7;
tr47:
#line 129 "evalStringToScalarScanner.rl"
	{te = p+1;{ EMIT_TOKEN(LESS_EQ); }}
	goto st7;
tr48:
#line 130 "evalStringToScalarScanner.rl"
	{te = p;p--;{ EMIT_TOKEN(GREATER); }}
	goto st7;
tr49:
#line 131 "evalStringToScalarScanner.rl"
	{te = p+1;{ EMIT_TOKEN(GREATER_EQ); }}
	goto st7;
tr50:
#line 96 "evalStringToScalarScanner.rl"
	{te = p;p--;{
        driver.parsePosition() = (ts-buf);
        const word ident = word::validate(ts, te);

        driver.reportFatal("Unknown function/type: " + ident);
        driver.parsePosition() = (p-buf);
    }}
	goto st7;
tr52:
#line 1 "NONE"
	{	switch( act ) {
	case 23:
	{{p = ((te))-1;} EMIT_TOKEN(PI); }
	break;
	case 24:
	{{p = ((te))-1;} EMIT_TOKEN(DEG_TO_RAD); }
	break;
	case 25:
	{{p = ((te))-1;} EMIT_TOKEN(RAD_TO_DEG); }
	break;
	case 26:
	{{p = ((te))-1;} EMIT_TOKEN(EXP); }
	break;
	case 28:
	{{p = ((te))-1;} EMIT_TOKEN(LOG10); }
	break;
	case 29:
	{{p = ((te))-1;} EMIT_TOKEN(POW); }
	break;
	case 31:
	{{p = ((te))-1;} EMIT_TOKEN(SQRT); }
	break;
	case 32:
	{{p = ((te))-1;} EMIT_TOKEN(CBRT); }
	break;
	case 36:
	{{p = ((te))-1;} EMIT_TOKEN(ASIN); }
	break;
	case 37:
	{{p = ((te))-1;} EMIT_TOKEN(ACOS); }
	break;
	case 39:
	{{p = ((te))-1;} EMIT_TOKEN(ATAN2); }
	break;
	case 40:
	{{p = ((te))-1;} EMIT_TOKEN(HYPOT); }
	break;
	case 41:
	{{p = ((te))-1;} EMIT_TOKEN(SINH); }
	break;
	case 42:
	{{p = ((te))-1;} EMIT_TOKEN(COSH); }
	break;
	case 43:
	{{p = ((te))-1;} EMIT_TOKEN(TANH); }
	break;
	case 44:
	{{p = ((te))-1;} EMIT_TOKEN(MIN); }
	break;
	case 45:
	{{p = ((te))-1;} EMIT_TOKEN(MAX); }
	break;
	case 47:
	{{p = ((te))-1;} EMIT_TOKEN(MAGSQR); }
	break;
	case 48:
	{{p = ((te))-1;} EMIT_TOKEN(FLOOR); }
	break;
	case 49:
	{{p = ((te))-1;} EMIT_TOKEN(CEIL); }
	break;
	case 50:
	{{p = ((te))-1;} EMIT_TOKEN(ROUND); }
	break;
	case 51:
	{{p = ((te))-1;} EMIT_TOKEN(RAND); }
	break;
	case 52:
	{{p = ((te))-1;} EMIT_TOKEN(BOOL); }
	break;
	case 53:
	{{p = ((te))-1;} EMIT_TOKEN(BOOL_FALSE); }
	break;
	case 54:
	{{p = ((te))-1;} EMIT_TOKEN(BOOL_TRUE); }
	break;
	case 55:
	{{p = ((te))-1;}
        driver.parsePosition() = (ts-buf);
        const word ident = word::validate(ts, te);

        driver.reportFatal("Unknown function/type: " + ident);
        driver.parsePosition() = (p-buf);
    }
	break;
	}
	}
	goto st7;
tr62:
#line 156 "evalStringToScalarScanner.rl"
	{te = p;p--;{ EMIT_TOKEN(ATAN); }}
	goto st7;
tr75:
#line 152 "evalStringToScalarScanner.rl"
	{te = p;p--;{ EMIT_TOKEN(COS); }}
	goto st7;
tr100:
#line 145 "evalStringToScalarScanner.rl"
	{te = p;p--;{ EMIT_TOKEN(LOG); }}
	goto st7;
tr107:
#line 164 "evalStringToScalarScanner.rl"
	{te = p;p--;{ EMIT_TOKEN(MAG); }}
	goto st7;
tr131:
#line 151 "evalStringToScalarScanner.rl"
	{te = p;p--;{ EMIT_TOKEN(SIN); }}
	goto st7;
tr134:
#line 148 "evalStringToScalarScanner.rl"
	{te = p;p--;{ EMIT_TOKEN(SQR); }}
	goto st7;
tr139:
#line 153 "evalStringToScalarScanner.rl"
	{te = p;p--;{ EMIT_TOKEN(TAN); }}
	goto st7;
st7:
#line 1 "NONE"
	{ts = 0;}
	if ( ++p == pe )
		goto _test_eof7;
case 7:
#line 1 "NONE"
	{ts = p;}
#line 431 "evalStringToScalarScanner.cc"
	switch( (*p) ) {
		case 32: goto st8;
		case 33: goto st9;
		case 37: goto tr10;
		case 38: goto st1;
		case 40: goto tr12;
		case 41: goto tr13;
		case 42: goto tr14;
		case 43: goto tr15;
		case 44: goto tr16;
		case 45: goto tr17;
		case 46: goto st2;
		case 47: goto tr19;
		case 58: goto tr21;
		case 60: goto st13;
		case 61: goto st5;
		case 62: goto st14;
		case 63: goto tr25;
		case 95: goto st15;
		case 97: goto st17;
		case 98: goto st25;
		case 99: goto st28;
		case 100: goto st35;
		case 101: goto st42;
		case 102: goto st44;
		case 104: goto st51;
		case 108: goto st55;
		case 109: goto st59;
		case 112: goto st65;
		case 114: goto st67;
		case 115: goto st78;
		case 116: goto st83;
		case 124: goto st6;
	}
	if ( (*p) < 48 ) {
		if ( 9 <= (*p) && (*p) <= 13 )
			goto st8;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 103 <= (*p) && (*p) <= 122 )
				goto st15;
		} else if ( (*p) >= 65 )
			goto st15;
	} else
		goto tr20;
	goto st0;
st0:
cs = 0;
	goto _out;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) == 32 )
		goto st8;
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st8;
	goto tr41;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) == 61 )
		goto tr43;
	goto tr42;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
	if ( (*p) == 38 )
		goto tr0;
	goto st0;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr2;
	goto st0;
tr2:
#line 1 "NONE"
	{te = p+1;}
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 519 "evalStringToScalarScanner.cc"
	switch( (*p) ) {
		case 69: goto st3;
		case 101: goto st3;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr2;
	goto tr44;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	switch( (*p) ) {
		case 43: goto st4;
		case 45: goto st4;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st11;
	goto tr3;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st11;
	goto tr3;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st11;
	goto tr44;
tr20:
#line 1 "NONE"
	{te = p+1;}
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
#line 560 "evalStringToScalarScanner.cc"
	switch( (*p) ) {
		case 46: goto tr2;
		case 69: goto st3;
		case 101: goto st3;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr20;
	goto tr44;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( (*p) == 61 )
		goto tr47;
	goto tr46;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 61 )
		goto tr6;
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( (*p) == 61 )
		goto tr49;
	goto tr48;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( (*p) == 95 )
		goto tr51;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr51;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr51;
	} else
		goto tr51;
	goto tr50;
tr51:
#line 1 "NONE"
	{te = p+1;}
#line 96 "evalStringToScalarScanner.rl"
	{act = 55;}
	goto st16;
tr57:
#line 1 "NONE"
	{te = p+1;}
#line 155 "evalStringToScalarScanner.rl"
	{act = 37;}
	goto st16;
tr59:
#line 1 "NONE"
	{te = p+1;}
#line 154 "evalStringToScalarScanner.rl"
	{act = 36;}
	goto st16;
tr63:
#line 1 "NONE"
	{te = p+1;}
#line 157 "evalStringToScalarScanner.rl"
	{act = 39;}
	goto st16;
tr66:
#line 1 "NONE"
	{te = p+1;}
#line 170 "evalStringToScalarScanner.rl"
	{act = 52;}
	goto st16;
tr71:
#line 1 "NONE"
	{te = p+1;}
#line 150 "evalStringToScalarScanner.rl"
	{act = 32;}
	goto st16;
tr73:
#line 1 "NONE"
	{te = p+1;}
#line 167 "evalStringToScalarScanner.rl"
	{act = 49;}
	goto st16;
tr76:
#line 1 "NONE"
	{te = p+1;}
#line 160 "evalStringToScalarScanner.rl"
	{act = 42;}
	goto st16;
tr83:
#line 1 "NONE"
	{te = p+1;}
#line 142 "evalStringToScalarScanner.rl"
	{act = 24;}
	goto st16;
tr85:
#line 1 "NONE"
	{te = p+1;}
#line 144 "evalStringToScalarScanner.rl"
	{act = 26;}
	goto st16;
tr90:
#line 1 "NONE"
	{te = p+1;}
#line 173 "evalStringToScalarScanner.rl"
	{act = 53;}
	goto st16;
tr93:
#line 1 "NONE"
	{te = p+1;}
#line 166 "evalStringToScalarScanner.rl"
	{act = 48;}
	goto st16;
tr97:
#line 1 "NONE"
	{te = p+1;}
#line 158 "evalStringToScalarScanner.rl"
	{act = 40;}
	goto st16;
tr102:
#line 1 "NONE"
	{te = p+1;}
#line 146 "evalStringToScalarScanner.rl"
	{act = 28;}
	goto st16;
tr106:
#line 1 "NONE"
	{te = p+1;}
#line 163 "evalStringToScalarScanner.rl"
	{act = 45;}
	goto st16;
tr110:
#line 1 "NONE"
	{te = p+1;}
#line 165 "evalStringToScalarScanner.rl"
	{act = 47;}
	goto st16;
tr111:
#line 1 "NONE"
	{te = p+1;}
#line 162 "evalStringToScalarScanner.rl"
	{act = 44;}
	goto st16;
tr112:
#line 1 "NONE"
	{te = p+1;}
#line 141 "evalStringToScalarScanner.rl"
	{act = 23;}
	goto st16;
tr114:
#line 1 "NONE"
	{te = p+1;}
#line 147 "evalStringToScalarScanner.rl"
	{act = 29;}
	goto st16;
tr123:
#line 1 "NONE"
	{te = p+1;}
#line 143 "evalStringToScalarScanner.rl"
	{act = 25;}
	goto st16;
tr124:
#line 1 "NONE"
	{te = p+1;}
#line 169 "evalStringToScalarScanner.rl"
	{act = 51;}
	goto st16;
tr127:
#line 1 "NONE"
	{te = p+1;}
#line 168 "evalStringToScalarScanner.rl"
	{act = 50;}
	goto st16;
tr132:
#line 1 "NONE"
	{te = p+1;}
#line 159 "evalStringToScalarScanner.rl"
	{act = 41;}
	goto st16;
tr135:
#line 1 "NONE"
	{te = p+1;}
#line 149 "evalStringToScalarScanner.rl"
	{act = 31;}
	goto st16;
tr140:
#line 1 "NONE"
	{te = p+1;}
#line 161 "evalStringToScalarScanner.rl"
	{act = 43;}
	goto st16;
tr142:
#line 1 "NONE"
	{te = p+1;}
#line 174 "evalStringToScalarScanner.rl"
	{act = 54;}
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 765 "evalStringToScalarScanner.cc"
	if ( (*p) == 95 )
		goto tr51;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr51;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr51;
	} else
		goto tr51;
	goto tr52;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	switch( (*p) ) {
		case 95: goto tr51;
		case 99: goto st18;
		case 115: goto st20;
		case 116: goto st22;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr51;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr51;
	} else
		goto tr51;
	goto tr50;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	switch( (*p) ) {
		case 95: goto tr51;
		case 111: goto st19;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr51;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr51;
	} else
		goto tr51;
	goto tr50;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	switch( (*p) ) {
		case 95: goto tr51;
		case 115: goto tr57;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr51;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr51;
	} else
		goto tr51;
	goto tr50;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	switch( (*p) ) {
		case 95: goto tr51;
		case 105: goto st21;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr51;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr51;
	} else
		goto tr51;
	goto tr50;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	switch( (*p) ) {
		case 95: goto tr51;
		case 110: goto tr59;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr51;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr51;
	} else
		goto tr51;
	goto tr50;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	switch( (*p) ) {
		case 95: goto tr51;
		case 97: goto st23;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr51;
	} else if ( (*p) > 90 ) {
		if ( 98 <= (*p) && (*p) <= 122 )
			goto tr51;
	} else
		goto tr51;
	goto tr50;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	switch( (*p) ) {
		case 95: goto tr51;
		case 110: goto st24;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr51;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr51;
	} else
		goto tr51;
	goto tr50;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	switch( (*p) ) {
		case 50: goto tr63;
		case 95: goto tr51;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr51;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr51;
	} else
		goto tr51;
	goto tr62;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	switch( (*p) ) {
		case 95: goto tr51;
		case 111: goto st26;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr51;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr51;
	} else
		goto tr51;
	goto tr50;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	switch( (*p) ) {
		case 95: goto tr51;
		case 111: goto st27;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr51;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr51;
	} else
		goto tr51;
	goto tr50;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
